# dotprompt

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  .npmrc  .release-please-config.json  .release-please-manifest.json  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  README.md  addlicense.sh  biome.json  captainhook.json  go.MODULE.bazel  go.bazelrc  java.MODULE.bazel  java.bazelrc  maven_install.json  mkdocs.yml  package.json  pnpm-lock.bazel.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  rust.MODULE.bazel  rust.bazelrc  specSchema.json  taplo.toml  ts.MODULE.bazel  ts.bazelrc  tsconfig.json
.github/: labeler.yml  release-please.yml
.github/ISSUE_TEMPLATE/: 🎻-dotprompt-fiddle.md  🐞-bug-report--go-.md  🐞-bug-report--js-.md  🐞-bug-report--python-.md  💡-feature-request.md  📝-documentation.md
.github/scripts/: release.sh
.github/workflows/: bazel.yml  deploy.yml  engdoc.yml  go.yml  golangci-lint.yml  publish_rust_package.yml  python.yml  release-please.yml  release.yml  rust.yml  smoke-test-wheels.yml  test.yml
bazel/rules_vitest/: defs.bzl
docs/: index.md
docs/contributing/: coding_guidelines.md  git_workflow.md  index.md  packagin_rust.md  releases.md
docs/extending/: index.md  specification.md
go/: CHANGELOG.md  go.mod  go.sum
go/dotprompt/: BUILD.bazel  doc.go  dotprompt.go  dotprompt_test.go  example_test.go  helper.go  helper_test.go  parse.go  parse_test.go  picoschema.go  picoschema_test.go  schema_test.go  types.go  types_test.go  util.go  util_test.go
go/dotprompt/test/: BUILD.bazel  spec_parser_func.go  spec_test.go  types.go
go/spec/: metadata.yaml  partials.yaml
java/: CHANGELOG.md
java/com/google/dotprompt/smoke/: BUILD.bazel  Smoke.java  SmokeTest.java
js/: BUILD.bazel  CHANGELOG.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  typedoc.json  vitest.config.mts  vitest.config.ts
js/examples/: adapters.ts
js/src/: dotprompt.test.ts  dotprompt.ts  environment.ts  helpers.ts  index.ts  parse.test.ts  parse.ts  picoschema.ts  types.d.ts  types.ts  util.ts
js/src/adapters/: gemini.ts  openai.ts
js/src/stores/: dir.ts
js/test/: spec.test.ts
js/test/stores/: dir.test.ts
python/: README.md  captainhook.json  noxfile.py  pyproject.toml  taplo.toml  tox.ini
python/dotpromptz/: CHANGELOG.md  README.md  interfaces.py  pyproject.toml
python/dotpromptz/src/dotpromptz/: __init__.py  dotprompt.py  errors.py  helpers.py  helpers_test.py  interfaces.py  models.py  parse.py  parse_test.py  picoschema.py  resolvers.py  safe_string.py  safe_string_test.py  typing.py  util.py  util_test.py
python/dotpromptz/src/dotpromptz/adapters/: __init__.py  openai.py
python/dotpromptz/src/dotpromptz/stores/: __init__.py  _dir_async.py  _dir_sync.py  _io.py  _testutils.py  _typing.py
python/dotpromptz/src/handlebarz/: __init__.py
python/dotpromptz/tests/dotpromptz/: dotprompt_test.py  helpers_test.py  models_test.py  parse_test.py  picoschema_test.py  resolvers_test.py  spec_test.py  util_test.py
python/dotpromptz/tests/dotpromptz/stores/: dir_async_test.py  dir_sync_test.py
python/handlebarrz/: CHANGELOG.md  Cargo.toml  README.md  dockerfile-alpine  dockerfile-arm64  dockerfile-x86-64  generate-alpine-wheels.sh  generate-arm-wheels.sh  generate-x86-64-wheels.sh  pyproject.toml
python/handlebarrz/smoke_tests/: Dockerfile-alpine  Dockerfile-debian  Dockerfile-debian-arm64  Dockerfile-fedora  Dockerfile-fedora-arm64  Dockerfile-redhat  Dockerfile-redhat-arm64  execute-test.sh  handlebarrz_test.py  pyproject.toml
python/handlebarrz/src/: helpers.rs  lib.rs
python/handlebarrz/src/handlebarrz/: __init__.py  _native.pyi
python/handlebarrz/tests/: __init__.py  advanced_features_test.py  block_context_test.py  block_helpers_test.py  escape_test.py  extra_helpers_test.py  helpers_test.py  partials_test.py  subexpression_test.py  template_core_test.py  template_test.py  whitespace_test.py
python/tests/smoke/: js2py.pyi  package_test.py  pyproject.toml
rs/: CHANGELOG.md
rs/dotprompt/: Cargo.toml
rs/smoke/: BUILD.bazel  Cargo.toml  README.md
rs/smoke/src/: lib.rs
scripts/: add_license  build_dists  check_license  fmt  format_build_files  format_go_files  format_handlebarrz_files  format_java_files  format_python_files  format_rust_files  format_toml_files  format_ts_files  lint  run_bazel_checks  run_go_checks  run_go_tests  run_handlebarrz_checks  run_handlebarrz_tests  run_js_tests  run_lint  run_python_checks  run_python_checks_with_nox  run_python_checks_with_tox  run_python_tests  run_python_tests_with_nox  run_python_tests_with_tox  run_rust_checks  run_rust_tests  run_tests  setup  update_deps  watch_python_tests
site/: .gitignore  LICENSE  astro.config.mjs  config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs
site/src/: env.d.ts
site/src/components/: Callout.astro
site/src/components/core/: Copy.tsx  Footer.astro  Header.astro  Logo.astro
site/src/components/home/: hero.astro
site/src/components/ui/: breadcrumb.tsx  button.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  separator.tsx
site/src/content/: config.ts
site/src/content/docs/: getting-started.mdx  implementors.mdx  reference.mdx
site/src/content/docs/reference/: frontmatter.mdx  template.mdx
site/src/lib/: types.ts  utils.ts
site/src/pages/: index.astro
site/src/styles/: globals.css
spec/: BUILD.bazel  metadata.yaml  partials.yaml  picoschema.yaml  schema.json  variables.yaml
spec/helpers/: history.yaml  ifEquals.yaml  json.yaml  media.yaml  role.yaml  section.yaml  unlessEquals.yaml
src/: environment.ts  helpers.ts  parse.ts
test/: spec.test.ts
