# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")
load("@gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

# gazelle:prefix github.com/google/dotprompt
gazelle(name = "gazelle")

# Building this package creates bazel-bin/node_modules/@google/dotprompt
# so that other packages can depend on this target.
npm_link_package(
    name = "node_modules/@google/dotprompt",
    src = "//js:pkg",
    package = "@google/dotprompt",
    visibility = ["//visibility:public"],
)

# This macro expands to a npm_link_package for each of the dependencies in
# package.json.
npm_link_all_packages(name = "node_modules")
