[workspace]
members = [
  "rs/smoke",
  "python/handlebarrz", # TODO: Fix linker errors.
]
resolver = "3"

[workspace.dependencies]
handlebars = "6.3.2"
pyo3 = { version = "0.24.2", features = [
  "extension-module",
  "generate-import-lib",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.rust]
dead_code       = "deny"
missing_docs    = "deny"
unreachable_pub = "warn"
unsafe_code     = "forbid"
