[workspace]
exclude = [
  "python/handlebarrz", # TODO: Fix linker errors.
]
members = ["rs/smoke"]
resolver = "3"

[workspace.dependencies]
handlebars = "6.3.2"
pyo3 = { version = "0.24.2", features = [
  "extension-module",
  "generate-import-lib",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.rust]
dead_code                     = "deny"
missing_debug_implementations = "deny"
missing_docs                  = "deny"
trivial_casts                 = "deny"
unreachable_pub               = "deny"
unsafe_code                   = "forbid"
unused_allocation             = "deny"
unused_assignments            = "deny"
unused_comparisons            = "deny"
unused_features               = "deny"
unused_imports                = "deny"
unused_macros                 = "deny"
unused_must_use               = "deny"
unused_mut                    = "deny"
unused_parens                 = "deny"
unused_variables              = "deny"

[workspace.lints.clippy]
# Promote warnings to errors for core clippy groups.
cargo       = "deny"
correctness = "deny"
nursery     = "deny" # Experimental lints.
pedantic    = "deny"
perf        = "deny"
style       = "deny"
suspicious  = "deny"
