# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
exclude = [
  "python/handlebarrz", # TODO: Fix linker errors.
]
members = ["rs/smoke"]
resolver = "3"

[workspace.dependencies]
handlebars = "6.3.2"
pyo3 = { version = "0.24.2", features = [
  "extension-module",
  "generate-import-lib",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.rust]
dead_code                     = "deny"
missing_debug_implementations = "deny"
missing_docs                  = "deny"
trivial_casts                 = "deny"
unreachable_pub               = "deny"
unsafe_code                   = "forbid"
unused_allocation             = "deny"
unused_assignments            = "deny"
unused_comparisons            = "deny"
unused_features               = "deny"
unused_imports                = "deny"
unused_macros                 = "deny"
unused_must_use               = "deny"
unused_mut                    = "deny"
unused_parens                 = "deny"
unused_variables              = "deny"

[workspace.lints.clippy]
cargo       = "deny"
correctness = "deny"
expect_used = "deny"
nursery     = "deny" # Experimental lints.
panic       = "deny"
pedantic    = "deny"
perf        = "deny"
style       = "deny"
suspicious  = "deny"
unwrap_used = "deny"
