"""Configuration for Bazel with Go dependencies."""

GO_VERSION = "1.24.2"

bazel_dep(name = "rules_go", version = "0.54.0", repo_name = "io_bazel_rules_go")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = GO_VERSION,
)
use_repo(go_sdk, "go_sdk")

register_toolchains("@go_sdk//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")
use_repo(
    go_deps,
    "com_github_go_viper_mapstructure_v2",
    "com_github_goccy_go_yaml",
    "com_github_invopop_jsonschema",
    "com_github_mbleigh_raymond",
    "com_github_stretchr_testify",
    "com_github_wk8_go_ordered_map_v2",
)
