# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

"""Configuration for Bazel with Java dependencies."""

bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")

# Register the specific Java toolchain version.
# See https://github.com/bazelbuild/rules_java/blob/master/toolchains.bzl
java_toolchain = use_repo_rule("@rules_java//java:repositories.bzl", "java_toolchain")
java_toolchain(
    name = "jdk",
    version = "21",
)


maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# Overriding these versions to prevent duplicate version warnings.
maven.artifact(
    artifact = "com.google.guava:guava:33.4.8-jre",
    group = "com.google.guava",
    name = "guava",
    version = "33.4.8-jre",
)
maven.artifact(
    artifact = "com.google.truth:truth:1.4.4",
    group = "com.google.truth",
    name = "truth",
    version = "1.4.4",
)

maven.install(
    artifacts = [
        "junit:junit:4.13.2",
        "com.google.truth.extensions:truth-proto-extension:1.4.4",
        "com.google.truth:truth:1.4.4",
        "com.github.jknack:handlebars:4.4.0", 
        "com.google.guava:guava:33.4.8-jre",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)

use_repo(maven, "maven")
