load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//bazel/rules_vitest:defs.bzl", "vitest_test")

npm_link_all_packages()

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = [":__subpackages__"],
)

ts_project(
    name = "dotprompt",
    srcs = glob(
        [
            "**/*.ts",
        ],
        exclude = [
            "**/*.test.ts",
            "**/*.bench.ts",
            "**/*.test.tsx",
            "node_modules/**",
        ],
    ),
    no_emit = True,
    out_dir = "dist",
    tsconfig = ":tsconfig",
    validate = True,
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules/@types/node",
        ":node_modules/handlebars",
        ":node_modules/yaml",
    ],
)

vitest_test(
    name = "dotprompt_test",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.test.ts",
        ],
        exclude = [
            "node_modules/**",
            "examples/**",
            "**/spec.test.ts",  # TODO: Remains to be fixed.
        ],
    ) + [
        "//spec:spec_js_lib",
    ],
    config = ":vitest.config.mts",
    deps = [
        ":dotprompt",
        ":node_modules/@types/node",
        ":node_modules/handlebars",
        ":node_modules/vitest",
        ":node_modules/yaml",
    ],
)

js_library(
    name = "pkg",
    srcs = [
        "package.json",
        ":dotprompt",
    ],
    visibility = ["//visibility:public"],
)
