[project]
dependencies = ["dotpromptz", "handlebarz"]
description = "Workspace for Dotprompt packages"
license = { text = "Apache-2.0" }
name = "dotprompt-workspace"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[dependency-groups]
dev = [
  "bpython>=0.25",
  "ipython>=8.31.0",
  "jupyter>=1.1.1",
  "pytest-asyncio>=0.25.2",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
]
lint = ["mypy>=1.14.1", "ruff>=0.9.2"]

[tool.hatch.build.targets.wheel]
packages = []

[tool.setuptools]
py-modules = []

# Pytest for unit testing and coverage.
[tool.pytest]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
python_files = ["packages/**/*_test.py"]
testpaths = ["packages"]

[tool.pytest.ini_options]
addopts = "--cov"

[tool.coverage.report]
fail_under = 70

# uv based package management.
[tool.uv]
default-groups = ["dev", "lint"]

[tool.uv.sources]
dotpromptz = { workspace = true }
handlebarz = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

# Ruff checks and formatting.
[tool.ruff]
indent-width = 4
line-length = 80

[tool.ruff.format]
line-ending = "lf"
quote-style = "single"

# Static type checking.
[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_configs = true
