[project]
dependencies    = ["dotpromptz"]
description     = "Workspace for Dotprompt packages"
license         = { text = "Apache-2.0" }
name            = "dotprompt-workspace"
readme          = "README.md"
requires-python = ">=3.12"
version         = "0.1.0"

[dependency-groups]
dev = [
  "bpython>=0.25",
  "ipython>=8.31.0",
  "jupyter>=1.1.1",
  "pytest-asyncio>=0.25.2",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-watcher>=0.4.3",
  "types-pyyaml>=6.0.12.20241230",
]
lint = ["mypy>=1.14.1", "ruff>=0.9.2"]

[tool.hatch.build.targets.wheel]
packages = []

[tool.setuptools]
py-modules = []

# Pytest for unit testing and coverage.
[tool.pytest]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode                       = "strict"
python_files                       = ["**/*_test.py"]

[tool.pytest.ini_options]
addopts = "--cov"

[tool.coverage.report]
fail_under = 70

# uv based package management.
[tool.uv]
default-groups = ["dev", "lint"]

[tool.uv.sources]
dotpromptz = { workspace = true }

[tool.uv.workspace]
members = ["dotpromptz", "tests/*"]

# Ruff checks and formatting.
[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
indent-width = 4
line-length = 80
target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]
select = [
  "E",    # pycodestyle (errors)
  "W",    # pycodestyle (warnings)
  "F",    # pyflakes
  "I",    # isort (import sorting)
  "UP",   # pyupgrade (Python version upgrades)
  "B",    # flake8-bugbear (common bugs)
  "N",    # pep8-naming (naming conventions)
  "F401", # unused imports
  "F403", # wildcard imports
  "F841", # unused variables
]

[tool.ruff.format]
indent-style              = "space"
line-ending               = "lf"
quote-style               = "single"
skip-magic-trailing-comma = false

# Static type checking.
[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs    = true
strict                   = true
warn_unused_configs      = true
