[project]
dependencies    = ["dotpromptz", "dotprompt-handlebars"]
description     = "Workspace for Dotprompt packages"
license         = { text = "Apache-2.0" }
name            = "dotprompt-workspace"
readme          = "README.md"
requires-python = ">=3.10"
version         = "0.1.0"

[dependency-groups]
dev = [
  "bpython>=0.25",
  "ipython>=8.31.0",
  "jupyter>=1.1.1",
  "pytest-asyncio>=0.25.2",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-watcher>=0.4.3",
  "types-pyyaml>=6.0.12.20241230",
  "tox>=4.25.0",
  "tox-uv>=1.25.0",
]
lint = ["mypy>=1.14.1", "ruff>=0.9.2"]

[tool.hatch.build.targets.wheel]
packages = []

[tool.setuptools]
py-modules = []

# Pytest for unit testing and coverage.
[tool.pytest]

[tool.pytest.ini_options]
addopts                            = ["--cov", "-v", "--no-header"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode                       = "strict"
log_cli                            = true
log_cli_date_format                = "%Y-%m-%d %H:%M:%S"
log_cli_format                     = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_level                      = "DEBUG"
python_files                       = ["**/*_test.py"]

[tool.coverage.report]
fail_under = 85

# uv based package management.
[tool.uv]
default-groups = ["dev", "lint"]

[tool.uv.sources]
dotprompt-handlebars = { workspace = true }
dotpromptz           = { workspace = true }

[tool.uv.workspace]
members = ["dotpromptz", "handlebarrz", "tests/*"]

# Ruff checks and formatting.
[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
indent-width = 4
line-length = 120
target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]
select = [
  "E",    # pycodestyle (errors)
  "W",    # pycodestyle (warnings)
  "F",    # pyflakes
  "I",    # isort (import sorting)
  "UP",   # pyupgrade (Python version upgrades)
  "B",    # flake8-bugbear (common bugs)
  "N",    # pep8-naming (naming conventions)
  "D",    # pydocstyle
  "F401", # unused imports
  "F403", # wildcard imports
  "F841", # unused variables
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["dotpromptz", "aioia", "dotprompt-handlebars"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format      = true
docstring-code-line-length = 80
indent-style               = "space"
line-ending                = "lf"
quote-style                = "single"
skip-magic-trailing-comma  = false

# Static type checking.
[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs    = true
strict                   = true
warn_unused_configs      = true
