[project]
authors = [{ name = "Google" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "aiofiles>=24.1.0",
  "dotprompt-handlebars",
  "pydantic[email]>=2.10.6",
  "structlog>=25.2.0",
  "types-aiofiles>=24.1.0.20250326",
  "strenum>=0.4.15 ; python_version < '3.11'",
]
description = "Dotpromptz is a language-neutral executable prompt template file format for Generative AI."
license = { text = "Apache-2.0" }
name = "dotpromptz"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/dotpromptz"]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "pytest-cov>=6.0.0",
  "pyyaml>=6.0.2",
  "types-pyyaml>=6.0.12.20241230",
]

[tool.pytest.ini_options]
log_cli             = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format      = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_level       = "DEBUG"
