[package]
authors       = ["Yesudeep Mangalapilly <yesudeep@google.com>"]
description   = "Handlebars library for Python based on handlebars-rust"
documentation = "https://github.com/google/dotprompt"
edition       = "2021"
homepage      = "https://github.com/google/dotprompt"
license       = "Apache-2.0"
name          = "handlebarrz"
repository    = "https://github.com/google/dotprompt"
version       = "0.1.0"

[lib]
crate-type = ["cdylib"]
name       = "handlebarrz"

[dependencies]
handlebars = "6.3.2"
pyo3       = { version = "0.24.0", features = ["extension-module"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
