# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
authors       = ["Yesudeep Mangalapilly <yesudeep@google.com>"]
description   = "Handlebars library for Python based on handlebars-rust"
documentation = "https://github.com/google/dotprompt"
edition       = "2024"
homepage      = "https://github.com/google/dotprompt"
license       = "Apache-2.0"
name          = "handlebarrz"
repository    = "https://github.com/google/dotprompt"
version       = "0.1.0"

[lib]
crate-type = ["cdylib"]
name       = "handlebarrz"

[dependencies]
handlebars = "6.3.2"
pyo3 = { version = "0.24.2", features = [
  "extension-module",
  "generate-import-lib",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TODO: Enable workspace lints once linker errors are fixed.
#[lints]
#workspace = true
