[project]
authors = [{ name = "Yesudeep Mangalapilly", email = "yesudeep@google.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Topic :: Text Processing :: Markup",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = ["structlog>=25.2.0"]
description = "Handlebars library for Python based on handlebars-rust."
name = "handlebarrz"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[build-system]
build-backend = "maturin"
requires      = ["maturin>=1.4,<2.0"]

[tool.maturin]
features      = ["pyo3/extension-module"]
module-name   = "handlebarrz._native"
python-source = "src"

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-cov>=6.0.0", "maturin>=1.8.3"]
