[project]
authors = [{ name = "Yesudeep Mangalapilly", email = "yesudeep@google.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Text Processing :: Markup",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "strenum>=0.4.15 ; python_version < '3.11'",
  "structlog>=25.2.0",
]
description = "Handlebars library for Python based on handlebars-rust."
name = "dotprompt_handlebars"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1.dev1"

[build-system]
build-backend = "maturin"
requires      = ["maturin>=1.4,<2.0"]

[tool.maturin]
features      = ["pyo3/extension-module"]
module-name   = "handlebarrz._native"
python-source = "src"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=6.0.0",
  "maturin[patchelf]>=1.8.3",
  "ziglang>=0.14.0",
]
