# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
authors     = ["Yesudeep Mangalapilly <yesudeep@google.com>"]
categories  = ["development-tools"]
description = "A smoke test package for dotprompt workspace."
edition     = "2024"
keywords    = ["smoke-test", "dotprompt"]
license     = "Apache-2.0"
name        = "smoke"
readme      = "README.md"
repository  = "https://github.com/google/dotprompt"
version     = "0.1.0"

[dependencies]

[lints]
workspace = true
