[project]
authors         = [{ name = "Abraham Lazaro", email = "lazaromartinez@google.com" }]
dependencies    = ["handlebarrz>=0.1.9"]
name            = "handlebarrz-smoke-tests"
readme          = "README.md"
requires-python = ">=3.10"
version         = "0.1.0"

[tool.uv.sources]
handlebarrz = { index = "testpypi" }

[[tool.uv.index]]
name = "testpypi"
url  = "https://test.pypi.org/simple"

[[tool.uv.index]]
default = true
name    = "pypi"
url     = "https://pypi.org/simple"
