[project]
authors         = [{ name = "Abraham Lazaro", email = "lazaromartinez@google.com" }]
dependencies    = ["handlebarrz>=0.1.11"]
name            = "handlebarrz-smoke-tests"
readme          = "README.md"
requires-python = ">=3.10"
version         = "0.1.0"

[[tool.uv.index]]
url = "https://test.pypi.org/simple"
