[project]
authors         = [{ name = "Abraham Lazaro", email = "lazaromartinez@google.com" }]
dependencies    = ["dotprompt-handlebars>=0.0.1.dev1"]
name            = "handlebarrz-smoke-tests"
readme          = "README.md"
requires-python = ">=3.10"
version         = "0.1.0"

[[tool.uv.index]]
url = "https://test.pypi.org/simple"
