[project]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "anyio>=4.9.0",
  "dotpromptz",
  #"handlebars@git+https://github.com/Manurajbharath/handlebars-py.git",
  #"js2py@git+https://github.com/a-j-albert/Js2Py---supports-python-3.13.git",
]
description = "Packaging smoke test"
license = { text = "Apache-2.0" }
name = "smoke"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[tool.pytest]
python_files = ["**/*_test.py"]
testpaths    = ["."]

[tool.hatch.build.targets.wheel]
packages = ["smoke"]
